apps/services/nextcloud/nc/deployment-nc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: services
  labels:
    app: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        fsGroup: 33
      containers:
      - name: redis
        image: redis:alpine
        command:
        - redis-server
        - "/etc/redis/redis.conf"
        ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "redis-cli -h $(hostname) ping"
          initialDelaySeconds: 15
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "redis-cli -h $(hostname) ping"
          initialDelaySeconds: 20
          periodSeconds: 3
        volumeMounts:
        - name: redis-conf
          mountPath: /etc/redis/redis.conf
          readOnly: true
          subPath: redis.conf
        - name: redis-data
          mountPath: /data
        resources: {}
      - name: nextcloud
        image: ebrianne/nextcloud:21.0.0-apache
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders:
            - name: Host
              value: nextcloud.technolab.cloud
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders:
            - name: Host
              value: nextcloud.technolab.cloud
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders:
            - name: Host
              value: nextcloud.technolab.cloud
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 30
        volumeMounts:
        - name: nextcloud-root
          mountPath: /var/www/html
          subPath: html
        - name: nextcloud-root
          mountPath: /var/www/html/config
          subPath: config
        - name: nextcloud-root
          mountPath: /var/www/html/custom_apps
          subPath: custom_apps
        - name: nextcloud-root
          mountPath: /var/www/html/themes
          subPath: themes
        - name: nextcloud-data
          mountPath: /data
        - name: nextcloud-config
          mountPath: /var/www/html/config/redis.config.php
          subPath: redis.config.php
        - name: nextcloud-config
          mountPath: /var/www/html/config/custom.config.php
          subPath: custom.config.php
        - name: nextcloud-config
          mountPath: /var/www/html/config/.htaccess
          subPath: .htaccess
        - name: nextcloud-config
          mountPath: /var/www/html/config/apache-pretty-urls.config.php
          subPath: apache-pretty-urls.config.php
        - name: nextcloud-config
          mountPath: /var/www/html/config/apcu.config.php
          subPath: apcu.config.php
        - name: nextcloud-config
          mountPath: /var/www/html/config/apps.config.php
          subPath: apps.config.php
        resources: {}
      - name: nextcloud-cron
        image: ebrianne/nextcloud:21.0.0-apache
        imagePullPolicy: IfNotPresent
        command: ["/cron.sh"]
        volumeMounts:
        - name: nextcloud-root
          mountPath: /var/www/html
          subPath: html
        - name: nextcloud-root
          mountPath: /var/www/html/config
          subPath: config
        - name: nextcloud-root
          mountPath: /var/www/html/custom_apps
          subPath: custom_apps
        - name: nextcloud-root
          mountPath: /var/www/html/themes
          subPath: themes
        - name: nextcloud-data
          mountPath: /data
        - name: nextcloud-config
          mountPath: /var/www/html/config/redis.config.php
          subPath: redis.config.php
        - name: nextcloud-config
          mountPath: /var/www/html/config/custom.config.php
          subPath: custom.config.php
        - name: nextcloud-config
          mountPath: /var/www/html/config/.htaccess
          subPath: .htaccess
        - name: nextcloud-config
          mountPath: /var/www/html/config/apache-pretty-urls.config.php
          subPath: apache-pretty-urls.config.php
        - name: nextcloud-config
          mountPath: /var/www/html/config/apcu.config.php
          subPath: apcu.config.php
        - name: nextcloud-config
          mountPath: /var/www/html/config/apps.config.php
          subPath: apps.config.php
        resources: {}
      # - name: nextcloud-exporter
      #   image: xperimental/nextcloud-exporter:v0.4.0
      #   imagePullPolicy: IfNotPresent
      #   env:
      #   - name: NEXTCLOUD_USERNAME
      #     valueFrom:
      #       secretKeyRef:
      #         name: nextcloud-secret
      #         key: nextcloud-username
      #   - name: NEXTCLOUD_PASSWORD
      #     valueFrom:
      #       secretKeyRef:
      #         name: nextcloud-secret
      #         key: nextcloud-exporter-password
      #   - name: NEXTCLOUD_SERVER
      #     value: http://localhost
      #   - name: NEXTCLOUD_TIMEOUT
      #     value: "5s"
      #   resources: {}
      #   ports:
      #   - name: metrics
      #     containerPort: 9205
      volumes:
      - name: nextcloud-root
        persistentVolumeClaim:
          claimName: nfs-pvc-nextcloud
      - name: nextcloud-config
        configMap:
          name: nextcloud-config
      - name: nextcloud-data
        nfs:
          server: "10.0.40.2"
          path: "/mnt/vault/Nextcloud"
      - name: redis-data
        emptyDir: {}
      - name: redis-conf
        configMap:
          name: nextcloud-config
