apps/services/nextcloud/nc/service-metrics.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcould-exporter-metrics
  namespace: services
  labels:
    app: nextcloud-exporter
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9205"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9205
    targetPort: metrics
  selector:
    app: nextcloud
