apps/services/nextcloud/nc/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: services
  labels:
    app: nextcloud
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: nextcloud
